--- a/福利姬频道总目录/rioko凉凉子全集/menu.html
+++ b/福利姬频道总目录/rioko凉凉子全集/menu.html
@@ -70,7 +70,18 @@
   <p><a href="https://telegra.ph/rioko凉凉子---电光机王-貉-51P8V-158GB-08-25">rioko凉凉子 - 电光机王 貉 [51P8V-1.58GB]</a></p>
   <p><a href="https://telegra.ph/rioko凉凉子-牛头人3-文字版8月3会员资源-08-25">rioko凉凉子 牛头人3 文字版（8月3会员资源）</a></p>
   <p><a href="https://telegra.ph/rioko凉凉子-牛头人3-08-25">rioko凉凉子 牛头人3</a></p>
-
+  <p><a href="https://telegra.ph/rioko凉凉子-镇海-自拍-20P-67MB-08-26">rioko凉凉子 镇海 自拍 20P 67MB</a></p>
+  <p><a href="https://telegra.ph/凉凉子-梦魔利兹X更衣人偶坠入爱河喜多川-08-26">凉凉子 梦魔利兹X更衣人偶坠入爱河喜多川</a></p>
+  <p><a href="https://telegra.ph/凉凉子-黑江雫耻辱俱乐部-文字版-08-26">凉凉子 黑江雫耻辱俱乐部 文字版</a></p>
+  <p><a href="https://telegra.ph/凉凉子-黑江雫耻辱俱乐部-08-26">凉凉子 黑江雫耻辱俱乐部</a></p>
+  <p><a href="https://telegra.ph/凉凉子-喜多川海梦黑江雫漫展篇文字版-08-26">凉凉子 喜多川海梦黑江雫漫展篇+文字版</a></p>
+  <p><a href="https://telegra.ph/凉凉子-更衣人偶番外-文字版-08-26">凉凉子 更衣人偶+番外 文字版</a></p>
+  <p><a href="https://telegra.ph/凉凉子-更衣人偶番外-纯享版-08-26">凉凉子 更衣人偶+番外 纯享版</a></p>
+  <p><a href="https://telegra.ph/凉凉子---元宵-08-26">凉凉子 - 元宵</a></p>
+  <p><a href="https://telegra.ph/rioko凉凉子---NO85年上の韵奇怪的老师-25P-156MB-08-26">rioko凉凉子 - NO.85《年上の韵》奇怪的老师 [25P-156MB]</a></p>
+  <p><a href="https://telegra.ph/rioko凉凉子-吉他妹妹-08-26">rioko凉凉子-吉他妹妹</a></p>
+  <p><a href="https://telegra.ph/rioko凉凉子--圣诞麋鹿套装50P-9V-08-26">rioko凉凉子 -《圣诞麋鹿套装》50P 9V</a></p>
+  <p><a href="https://telegra.ph/凉凉子温泉旅行-31P-6V-08-26">凉凉子温泉旅行 31P 6V</a></p>
 
 </body>
 </html>
