--- a/福利姬频道总目录/喵小吉(爆机少女喵小吉)全集/menu.html
+++ b/福利姬频道总目录/喵小吉(爆机少女喵小吉)全集/menu.html
@@ -50,6 +50,20 @@
   <p><a href="https://telegra.ph/喵小吉---浣溪沙端午-08-25">喵小吉 - 浣溪沙·端午</a></p>
   <p><a href="https://telegra.ph/喵小吉---T3限定---猫娘July-03-08-25">喵小吉 - T3限定 - 猫娘 </a></p>
   <p><a href="https://telegra.ph/喵小吉---更衣人偶坠入爱河-49P-439M-08-25">喵小吉 - 更衣人偶坠入爱河 49P 439M</a></p>
-
+  <p><a href="https://telegra.ph/喵小吉---战斗女仆6月3会员资源-08-26">喵小吉 - 战斗女仆（6月3会员资源）</a></p>
+  <p><a href="https://telegra.ph/小吉的雪糕时间6月4会员资源-08-26">小吉的雪糕时间（6月4会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉---浣溪沙端午-08-26">喵小吉 - 浣溪沙·端午</a></p>
+  <p><a href="https://telegra.ph/喵小吉---罪恶王冠-08-26">喵小吉 - 罪恶王冠</a></p>
+  <p><a href="https://telegra.ph/喵小吉---鸦6月2会员资源-08-26">喵小吉 - 鸦（6月2会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-4月订阅T3-永劫无间-胡桃-08-26">喵小吉 4月订阅T3 永劫无间-胡桃</a></p>
+  <p><a href="https://telegra.ph/喵小吉-4月订阅T3-原神-甘雨-08-26">喵小吉 4月订阅T3 原神-甘雨</a></p>
+  <p><a href="https://telegra.ph/吉小吉喵小吉--Re从零开始的夜生活-08-26">吉小吉（喵小吉）- Re：从零开始的夜生活</a></p>
+  <p><a href="https://telegra.ph/喵小吉---天道-08-26">喵小吉 - 天道</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉---小吉的电玩时间-08-26">爆机少女喵小吉 - 小吉的电玩时间</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉---拉克丝水晶玫瑰-08-26">爆机少女喵小吉 - 拉克丝·水晶玫瑰</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉忠粉福利白喫作品135MB-11P-08-26">爆机少女喵小吉《忠粉福利白喫作品》135MB 11P</a></p>
+  <p><a href="https://telegra.ph/喵小吉---喵酱的一天-30P-4V-08-26">喵小吉 - 喵酱的一天 30P 4V</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉-实习护士-30p-08-26">爆机少女喵小吉 实习护士 30p</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉-永恒魅魔-52p-2v-08-26">爆机少女喵小吉 永恒魅魔 52p 2v</a></p>
 </body>
 </html>
