--- a/福利姬频道总目录/许岚LAN全集/menu.html
+++ b/福利姬频道总目录/许岚LAN全集/menu.html
@@ -37,7 +37,11 @@
   <p><a href="https://telegra.ph/许岚LAN-短裙女仆-08-25">许岚LAN 短裙女仆</a></p>
   <p><a href="https://telegra.ph/许岚LAN-灰丝制服-40P-516MB-08-25">许岚LAN 灰丝制服 [40P-516MB]</a></p>
   <p><a href="https://telegra.ph/许岚LAN---黑丝少女-08-25">许岚LAN - 黑丝少女</a></p>
-
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/许岚LAN---黑色蕾丝睡衣-40P-585MB-08-26">许岚LAN - 黑色蕾丝睡衣 [40P-585MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-NO004-泳池死库水40P-713MB-08-26">许岚LAN NO.004 泳池死库水[40P-713MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-NO003-少女白色裙41P-627MB-08-26">许岚LAN NO.003 少女白色裙[41P-627MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-NO002-OL制服41P-587MB-08-26">许岚LAN NO.002 OL制服[41P-587MB]</a></p>
+  <p><a href="https://telegra.ph/许岚---纯欲牛仔短裤-08-26">许岚 - 纯欲牛仔短裤</a></p>
+  <p><a href="https://telegra.ph/许岚---NO01-教室jk黑丝-40P-426MB-08-26">许岚 - NO.01 教室jk黑丝 [40P-426MB]</a></p>
 </body>
 </html>
