--- a/福利姬频道总目录/宮本桜(宫本桜)全集/menu.html
+++ b/福利姬频道总目录/宮本桜(宫本桜)全集/menu.html
@@ -25,6 +25,7 @@
   <p><a href="https://telegra.ph/宮本桜-奥古斯特-25P-327MB-08-25">宮本桜 奥古斯特 [25P-327MB]</a></p>
   <p><a href="https://telegra.ph/宮本桜--花园花嫁9月25打赏资源-08-25">宮本桜 – 花园花嫁（9月25打赏资源）</a></p>
   <p><a href="https://telegra.ph/宮本桜-宫本樱樱饼---恶毒-35P-08-25">宮本桜 宫本樱樱饼 - 恶毒 [35P]</a></p>
+  <p><a href="https://telegra.ph/宫本桜-宫本樱樱饼---柴郡旗袍-音乐绚烂CaitSith-20P-08-25">宫本桜 宫本樱樱饼 - 柴郡旗袍 音乐绚烂CaitSith [20P]</a></p>
 
 </body>
 </html>
